# status-cpp-scaffold

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  main.cpp  main.qml
src/core/: CMakeLists.txt  DependencyInjector.h  StatusGoInterface.h
src/core/statusgo-emulator/: ChatEmulator.cpp  ChatEmulator.h  Emulator.h  WalletEmulator.cpp  WalletEmulator.h
src/plugins/Chat/: CMakeLists.txt
src/plugins/Chat/qml/: chat.qrc
src/plugins/Chat/qml/Chat/: ChatView.qml  qmldir
src/plugins/Chat/src/: ChatPlugin.cpp
src/plugins/Wallet/: CMakeLists.txt
src/plugins/Wallet/qml/: wallet.qrc
src/plugins/Wallet/qml/Wallet/: WalletView.qml  qmldir
src/plugins/Wallet/src/: WalletPlugin.cpp
